--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,10 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
+    id 'kotlin-android-extensions'
+    id 'kotlin-kapt'
 }
+
 
 android {
     compileSdk 31
@@ -14,10 +17,12 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        targetSdkVersion 31
     }
 
     buildTypes {
         release {
+
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
@@ -29,6 +34,9 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    compileSdkVersion 31
+    buildToolsVersion '30.0.2'
+    ndkVersion '16'
 }
 
 dependencies {
@@ -40,41 +48,28 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.room:room-runtime:2.4.0-alpha04'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
-    testImplementation 'junit:junit:4.+'
+    implementation 'com.google.android.gms:play-services-cast-framework:20.0.0'
+    testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
-    implementation 'com.google.android.material:material:1.4.0-alpha02'
+    implementation 'com.google.android.material:material:1.5.0-alpha02'
     implementation 'com.google.code.gson:gson:2.8.6'
     implementation 'androidx.activity:activity-ktx:1.3.1'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
     implementation 'androidx.cardview:cardview:1.0.0'
 
 
-
     implementation 'androidx.activity:activity-ktx:1.3.1'
-    implementation 'androidx.fragment:fragment-ktx:1.3.0-rc02'
+    implementation 'androidx.fragment:fragment-ktx:1.4.0-alpha07'
+
+    implementation fileTree(dir: "libs", include: ["*.jar"])
 
 
-//    // Navigation Component
-//    implementation 'androidx.navigation:navigation-fragment-ktx:2.2.2'
-//    implementation 'androidx.navigation:navigation-ui-ktx:2.2.2'
-//
-//    // Room components
-//    implementation "androidx.room:room-runtime:2.2.5"
-//    kapt "androidx.room:room-compiler:2.2.5"
-//    implementation "androidx.room:room-ktx:2.2.5"
-//    androidTestImplementation "androidx.room:room-testing:2.2.5"
 
-//    // Lifecycle components
-//    implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
-//    implementation "androidx.lifecycle:lifecycle-common-java8:2.2.0"
-//    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0"
 
-//    // Kotlin components
-//    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.3.72"
-//    api "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.5"
-//    api "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.5"
+    kapt "androidx.room:room-compiler:2.4.0-alpha04"
+
 }
